# learn-python-with-ai

./: README.md  package-lock.json  package.json  pyproject.toml
.github/: copilot-instructions.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
src/agenticai_ppl/: .gitignore  main.py  server.py
